src/Makefile: Don't assume "make" is "gmake"

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 all:
-	@make -C core
-	@make -C console
-	@make -C sdl
-	@make -C util
+	$(MAKE) -C core
+	$(MAKE) -C console
+	$(MAKE) -C sdl
+	$(MAKE) -C util
 
 clean:
-	@make -C core clean
-	@make -C console clean
-	@make -C sdl clean
-	@make -C util clean
+	$(MAKE) -C core clean
+	$(MAKE) -C console clean
+	$(MAKE) -C sdl clean
+	$(MAKE) -C util clean
