OS_LINUX -> OS_UNIX
There is actually nothing Linux-specific guarded by OS_LINUX in the
code.  This tripped me up when porting to FreeBSD, as I created an
OS_FREEBSD macro before realizing that it was pointless while checking
the code.

--- a/Makefile.linux
+++ b/Makefile.linux
@@ -48,6 +48,7 @@ install: ti99sim
 	@$(INSTALL) -d $(DATA_DIR)/disks
 	@$(INSTALL) -d $(DATA_DIR)/roms
 	@$(INSTALL) -d $(BIN_DIR)
+	@$(INSTALL) -d $(SYS_BIN)
 	@for target in $(ITARGETS); do \
 	   $(INSTALL) -s $$target $(BIN_DIR); \
 	 done
